--- a/Data_Grope_Myon_Tau.ipynb
+++ b/Data_Grope_Myon_Tau.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "dafcbe48",
+   "execution_count": 2,
+   "id": "5a5f4ff6",
    "metadata": {},
    "outputs": [
     {
@@ -21,11 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "99375065",
+   "execution_count": 3,
+   "id": "c3c3dd55",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uproot\n",
+    "import awkward as ak\n",
+    "import mplhep\n",
+    "%matplotlib inline \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "#Myon\n",
     "#Runevent 5227\n",
     "m_event=np.array([7097,9214,9799,10263,11508,14448,14841,1176,1326,1369,1577,1851,2443,2762,2911,3092,3167,3439,3595,3981])\n",
@@ -56,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "623c64a6",
+   "execution_count": 4,
+   "id": "13e9bbd1",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +72,7 @@
        "Text(0.5, 1.0, 'Track Numbers')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -96,17 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "3ba0799c",
+   "execution_count": 5,
+   "id": "0190fbdc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e7dab05c30>"
+       "<matplotlib.legend.Legend at 0x1a3a4ec1510>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -135,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "5ab2746c",
+   "execution_count": 6,
+   "id": "4394a313",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e7dab72fe0>"
+       "<matplotlib.legend.Legend at 0x1a3a79f26b0>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,17 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "cf95b0b4",
+   "execution_count": 7,
+   "id": "cd35cfbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e7dbc2cf40>"
+       "<matplotlib.legend.Legend at 0x1a3a7a47a30>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -214,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "3ea3965f",
+   "execution_count": 16,
+   "id": "31dd4b42",
    "metadata": {},
    "outputs": [
     {
@@ -258,8 +264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "0dcf28fb",
+   "execution_count": 17,
+   "id": "fe0bfe0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,8 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "2995bc35",
+   "execution_count": 18,
+   "id": "abd6f5e7",
    "metadata": {},
    "outputs": [
     {
@@ -291,10 +297,10 @@
      "output_type": "stream",
      "text": [
       "myon\n",
-      "Tau: 0 Hadronic: 0 Electron: 0 Myon: 19\n",
-      "Tau: 19 Hadronic: 0 Electron: 0 Myon: 0\n",
-      "Tau: 0 Hadronic: 18 Electron: 0 Myon: 0\n",
-      "Tau: 0 Hadronic: 0 Electron: 20 Myon: 0\n"
+      "Tau: 0 Hadronic: 0 Electron: 0 Muon: 19\n",
+      "Tau: 19 Hadronic: 0 Electron: 0 Muon: 0\n",
+      "Tau: 0 Hadronic: 18 Electron: 0 Muon: 0\n",
+      "Tau: 0 Hadronic: 0 Electron: 20 Muon: 0\n"
      ]
     }
    ],
@@ -308,16 +314,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "ede888d9",
+   "execution_count": 19,
+   "id": "4746ee54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path_data = 'mc_z0experiment-main/'\n",
+    "#path_mc = 'samples/data'\n",
+    "\n",
+    "### Open the file introducing file path\n",
+    "file = uproot.open(path_data+'ee.root')\n",
+    "ttree_name = 'myTTree'\n",
+    "\n",
+    "### Print list of 'branches' of the TTree (i.e. list of variable names)\n",
+    "file[ttree_name].keys()\n",
+    "\n",
+    "## Load branches\n",
+    "branches = file[ttree_name].arrays()\n",
+    "\n",
+    "## Define an numpy array for 'Pcharged'\n",
+    "var = 'Ncharged'\n",
+    "e_nchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'Pcharged'\n",
+    "e_pchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_ecal'\n",
+    "e_E_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_hcal'\n",
+    "e_H_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "\n",
+    "#print(f\"Array of type '{type(pchar)}' defined for '{var}':\\n{pchar}\")\n",
+    "#print(pchar.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9ab04aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_data = 'mc_z0experiment-main/'\n",
+    "#path_mc = 'samples/data'\n",
+    "\n",
+    "### Open the file introducing file path\n",
+    "file = uproot.open(path_data+'mm.root')\n",
+    "ttree_name = 'myTTree'\n",
+    "\n",
+    "### Print list of 'branches' of the TTree (i.e. list of variable names)\n",
+    "file[ttree_name].keys()\n",
+    "\n",
+    "## Load branches\n",
+    "branches = file[ttree_name].arrays()\n",
+    "\n",
+    "## Define an numpy array for 'Pcharged'\n",
+    "var = 'Ncharged'\n",
+    "m_nchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'Pcharged'\n",
+    "m_pchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_ecal'\n",
+    "m_E_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_hcal'\n",
+    "m_H_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "\n",
+    "#print(f\"Array of type '{type(pchar)}' defined for '{var}':\\n{pchar}\")\n",
+    "#print(pchar.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bac80d5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_data = 'mc_z0experiment-main/'\n",
+    "#path_mc = 'samples/data'\n",
+    "\n",
+    "### Open the file introducing file path\n",
+    "file = uproot.open(path_data+'qq.root')\n",
+    "ttree_name = 'myTTree'\n",
+    "\n",
+    "### Print list of 'branches' of the TTree (i.e. list of variable names)\n",
+    "file[ttree_name].keys()\n",
+    "\n",
+    "## Load branches\n",
+    "branches = file[ttree_name].arrays()\n",
+    "\n",
+    "## Define an numpy array for 'Pcharged'\n",
+    "var = 'Ncharged'\n",
+    "h_nchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'Pcharged'\n",
+    "h_pchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_ecal'\n",
+    "h_E_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_hcal'\n",
+    "h_H_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "\n",
+    "#print(f\"Array of type '{type(pchar)}' defined for '{var}':\\n{pchar}\")\n",
+    "#print(pchar.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "288af276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_data = 'mc_z0experiment-main/'\n",
+    "#path_mc = 'samples/data'\n",
+    "\n",
+    "### Open the file introducing file path\n",
+    "file = uproot.open(path_data+'tt.root')\n",
+    "ttree_name = 'myTTree'\n",
+    "\n",
+    "### Print list of 'branches' of the TTree (i.e. list of variable names)\n",
+    "file[ttree_name].keys()\n",
+    "\n",
+    "## Load branches\n",
+    "branches = file[ttree_name].arrays()\n",
+    "\n",
+    "## Define an numpy array for 'Pcharged'\n",
+    "var = 'Ncharged'\n",
+    "t_nchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'Pcharged'\n",
+    "t_pchar = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_ecal'\n",
+    "t_E_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "var = 'E_hcal'\n",
+    "t_H_cal = ak.to_numpy(branches[var]) # See Docu (https://awkward-array.org/how-to-convert-numpy.html) for more conversions\n",
+    "\n",
+    "\n",
+    "#print(f\"Array of type '{type(pchar)}' defined for '{var}':\\n{pchar}\")\n",
+    "#print(pchar.max())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "36dceab6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Eff_matrix(eCtrk,eSump,eEcal,eHcal,mCtrk,mSump,mEcal,mHcal,hCtrk,hSump,hEcal,hHcal,tCtrk,tSump,tEcal,tHcal):\n",
+    "    #cuts \n",
+    "    #cuts=np.arrays(minCtrk,maxCtrk,maxSump1,minSump,maxSump,minEcal,maxEcal,minHcal,maxHcal)\n",
+    "    t_cuts=[2,7,0,0,75,1,75,0,35]\n",
+    "    h_cuts=[5,38,0,0,80,20,90,3,50]\n",
+    "    e_cuts=[0,4,1,20,1000,70,1000,0,7]\n",
+    "    m_cuts=[2,3,1,60,1000,1,11,0,14]\n",
+    "    tau_count1=0\n",
+    "    e_count1=0\n",
+    "    had_count1=0\n",
+    "    m_count1=0\n",
+    "    for i in range(len(eCtrk)):\n",
+    "        if (t_cuts[0]<=eCtrk[i]<=t_cuts[1]) and (t_cuts[3]<=eSump[i]<=t_cuts[4]) and (t_cuts[5]<=eEcal[i]<=t_cuts[6]) and (t_cuts[7]<=eHcal[i]<=t_cuts[8]):\n",
+    "            tau_count1+=1\n",
+    "        if (h_cuts[0]<=eCtrk[i]<=h_cuts[1]) and (h_cuts[3]<=eSump[i]<=h_cuts[4]) and (h_cuts[5]<=eEcal[i]<=h_cuts[6]) and (h_cuts[7]<=eHcal[i]<=h_cuts[8]):\n",
+    "            had_count1+=1\n",
+    "        if (m_cuts[0]<=eCtrk[i]<=m_cuts[1]) and (eSump[i]<=m_cuts[2] or m_cuts[3]<=eSump[i]<=m_cuts[4]) and (m_cuts[5]<=eEcal[i]<=m_cuts[6]) and (m_cuts[7]<=eHcal[i]<=m_cuts[8]):\n",
+    "            m_count1+=1\n",
+    "        if (e_cuts[0]<=eCtrk[i]<=e_cuts[1]) and (eSump[i]<=e_cuts[2] or e_cuts[3]<=eSump[i]<=e_cuts[4]) and (e_cuts[5]<=eEcal[i]<=e_cuts[6]) and (e_cuts[7]<=eHcal[i]<=e_cuts[8]):\n",
+    "            e_count1+=1\n",
+    "    tau_count2=0\n",
+    "    e_count2=0\n",
+    "    had_count2=0\n",
+    "    m_count2=0\n",
+    "    for i in range(len(mCtrk)):\n",
+    "        if (t_cuts[0]<=mCtrk[i]<=t_cuts[1]) and (t_cuts[3]<=mSump[i]<=t_cuts[4]) and (t_cuts[5]<=mEcal[i]<=t_cuts[6]) and (t_cuts[7]<=mHcal[i]<=t_cuts[8]):\n",
+    "            tau_count2+=1\n",
+    "        if (h_cuts[0]<=mCtrk[i]<=h_cuts[1]) and (h_cuts[3]<=mSump[i]<=h_cuts[4]) and (h_cuts[5]<=mEcal[i]<=h_cuts[6]) and (h_cuts[7]<=mHcal[i]<=h_cuts[8]):\n",
+    "            had_count2+=1\n",
+    "        if (m_cuts[0]<=mCtrk[i]<=m_cuts[1]) and (mSump[i]<=m_cuts[2] or m_cuts[3]<=mSump[i]<=m_cuts[4]) and (m_cuts[5]<=mEcal[i]<=m_cuts[6]) and (m_cuts[7]<=mHcal[i]<=m_cuts[8]):\n",
+    "            m_count2+=1\n",
+    "        if (e_cuts[0]<=mCtrk[i]<=e_cuts[1]) and (mSump[i]<=e_cuts[2] or e_cuts[3]<=mSump[i]<=e_cuts[4]) and (e_cuts[5]<=mEcal[i]<=e_cuts[6]) and (e_cuts[7]<=mHcal[i]<=e_cuts[8]):\n",
+    "            e_count2+=1\n",
+    "    tau_count3=0\n",
+    "    e_count3=0\n",
+    "    had_count3=0\n",
+    "    m_count3=0\n",
+    "    for i in range(len(hCtrk)):\n",
+    "        if (t_cuts[0]<=hCtrk[i]<=t_cuts[1]) and (t_cuts[3]<=hSump[i]<=t_cuts[4]) and (t_cuts[5]<=hEcal[i]<=t_cuts[6]) and (t_cuts[7]<=hHcal[i]<=t_cuts[8]):\n",
+    "            tau_count3+=1\n",
+    "        if (h_cuts[0]<=hCtrk[i]<=h_cuts[1]) and (h_cuts[3]<=hSump[i]<=h_cuts[4]) and (h_cuts[5]<=hEcal[i]<=h_cuts[6]) and (h_cuts[7]<=hHcal[i]<=h_cuts[8]):\n",
+    "            had_count3+=1\n",
+    "        if (m_cuts[0]<=hCtrk[i]<=m_cuts[1]) and (hSump[i]<=m_cuts[2] or m_cuts[3]<=hSump[i]<=m_cuts[4]) and (m_cuts[5]<=hEcal[i]<=m_cuts[6]) and (m_cuts[7]<=hHcal[i]<=m_cuts[8]):\n",
+    "            m_count3+=1\n",
+    "        if (e_cuts[0]<=hCtrk[i]<=e_cuts[1]) and (hSump[i]<=e_cuts[2] or e_cuts[3]<=hSump[i]<=e_cuts[4]) and (e_cuts[5]<=hEcal[i]<=e_cuts[6]) and (e_cuts[7]<=hHcal[i]<=e_cuts[8]):\n",
+    "            e_count3+=1\n",
+    "    tau_count4=0\n",
+    "    e_count4=0\n",
+    "    had_count4=0\n",
+    "    m_count4=0\n",
+    "    for i in range(len(tCtrk)):\n",
+    "        if (t_cuts[0]<=tCtrk[i]<=t_cuts[1]) and (t_cuts[3]<=tSump[i]<=t_cuts[4]) and (t_cuts[5]<=tEcal[i]<=t_cuts[6]) and (t_cuts[7]<=tHcal[i]<=t_cuts[8]):\n",
+    "            tau_count4+=1\n",
+    "        if (h_cuts[0]<=tCtrk[i]<=h_cuts[1]) and (h_cuts[3]<=tSump[i]<=h_cuts[4]) and (h_cuts[5]<=tEcal[i]<=h_cuts[6]) and (h_cuts[7]<=tHcal[i]<=h_cuts[8]):\n",
+    "            had_count4+=1\n",
+    "        if (m_cuts[0]<=tCtrk[i]<=m_cuts[1]) and (tSump[i]<=m_cuts[2] or m_cuts[3]<=tSump[i]<=m_cuts[4]) and (m_cuts[5]<=tEcal[i]<=m_cuts[6]) and (m_cuts[7]<=tHcal[i]<=m_cuts[8]):\n",
+    "            m_count4+=1\n",
+    "        if (e_cuts[0]<=tCtrk[i]<=e_cuts[1]) and (tSump[i]<=e_cuts[2] or e_cuts[3]<=tSump[i]<=e_cuts[4]) and (e_cuts[5]<=tEcal[i]<=e_cuts[6]) and (e_cuts[7]<=tHcal[i]<=e_cuts[8]):\n",
+    "            e_count4+=1\n",
+    "    \n",
+    "    return [[e_count1/len(eCtrk),m_count1/len(eCtrk),had_count1/len(eCtrk),tau_count1/len(eCtrk)],[e_count2/len(mCtrk),m_count2/len(mCtrk),had_count2/len(mCtrk),tau_count2/len(mCtrk)],[e_count3/len(hCtrk),m_count3/len(hCtrk),had_count3/len(hCtrk),tau_count3/len(hCtrk)],[e_count4/len(tCtrk),m_count4/len(tCtrk),had_count4/len(tCtrk),tau_count4/len(tCtrk)]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2d096d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cuts \n",
+    "#cuts=np.arrays(minCtrk,maxCtrk,maxSump1,minSump,maxSump,minEcal,maxEcal,minHcal,maxHcal)\n",
+    "t_cuts=[2,7,0,0,75,1,75,0,35]\n",
+    "h_cuts=[5,38,0,0,80,20,90,3,50]\n",
+    "e_cuts=[0,4,1,20,1000,70,1000,0,7]\n",
+    "m_cuts=[2,3,1,60,1000,1,11,0,14]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "62ee7a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.9429116649964819, 0.0, 1.0660753502057525e-05, 0.013336602631073965],\n",
+       " [0.0, 0.9030207351055827, 1.059535287822761e-05, 0.08455091596825633],\n",
+       " [1.0145795075231071e-05, 0.0, 0.8983594249363351, 0.008177510830636243],\n",
+       " [0.006097407024010907,\n",
+       "  0.0028530310298684578,\n",
+       "  0.04890549650314338,\n",
+       "  0.9583659454136895]]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Eff_matrix(e_nchar,e_pchar,e_E_cal,e_H_cal,m_nchar,m_pchar,m_E_cal,m_H_cal,h_nchar,h_pchar,h_E_cal,h_H_cal,t_nchar,t_pchar,t_E_cal,t_H_cal)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e97fb55",
+   "id": "edec08de",
    "metadata": {},
    "outputs": [],
    "source": []
